# extension-video-export

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .gitignore  README.md  compile_flags.txt  haxelib.json  hxformat.json  include.xml  test.hxml
.github/workflows/: build.yml
extension/videoexport/: VideoEncoder.hx
native/: AVAssetWriterEncoder.mm  media_foundation_encoder.cpp  mediacodec_encoder.cpp  openh264_minimp4_encoder.c
project/: Build.xml
project/common/: ExternalInterface.cpp
test/: DllSetup.hx  TestEncode.hx
test/android/: CMakeLists.txt  android_encoder_test.cpp
